fix horizontal scroll of modal__overlay

--- a/src/styles/components/_modal.scss
+++ b/src/styles/components/_modal.scss
@@ -23,7 +23,7 @@
     height: 100%;
     margin: 1em 0;
     position: relative;
-    overflow-y: hidden;
+    overflow: hidden;
   }
 
   &__overlay::after,
